public/site.css
.hidden.form,
.hidden.field {
    display: none;
}

form.ui.modal.tiny.form {
    background: #0A0536/* radial-gradient(circle, #0A0536, #08001E)*/
}

form.ui.modal.tiny.form .item {
    background: #0A0536/*radial-gradient(circle, #0A0536, #08001E)*/
}

form.ui.modal.tiny.form * {
    background: transparent;
}

form.ui.modal.tiny.form div.header,
input,
textarea,
.selection.dropdown,
.button,
.item,
.label {
    color: white !important;
}

.field.error .item {
    color: #9f3a38 !important;
}

form.ui.modal.tiny.form .field.error input {
    color: black !important;
}

form.ui.modal.tiny.form textarea,
.selection.dropdown,
.item,
.label,
.button {
    border: 1px solid !important;
    border-color: rgba(255, 255, 255, .1) !important;
}

form.ui.modal.tiny.form .menu {
    border: none !important;
}

form.ui.modal.tiny.form .message.success {
    background-color: #fcfff5;
    color: #2c662d; 
}

form.ui.modal.tiny.form .message.success .header {
    color: #1a531b !important;
}

form.ui.modal.tiny.form .message.error {
    background-color: #fff6f6;
    color: #9f3a38;
}

form.ui.modal.tiny.form .message.error .header {
    color: #912d2b !important;
}

.poster.segment {
    min-height: 100vh;
    display: grid;
    align-items: center;
    background: radial-gradient(circle, #0A0536, #08001E) !important;
}

img.title {
    width: 75vw;
}

.buttons.registration {
    position: relative;
    bottom: 7vw;
    border: none !important;
    background: linear-gradient(to right, #4800ff, #fc00de);
}

.buttons.registration .button.registration:hover {
    background: rgba(0, 0, 0, 0.5) !important;
}

/*
.ui.horizontal.divider {
    position: absolute;
    bottom: 10px;
}
*/

/* .buttons.registration .button.registration.middle {
border-left-width: 1px;
border-left-color: snow;
border-left-style: solid;
border-right-width: 1px;
border-right-color: snow;
border-right-style: solid;
} */

body {
    background: linear-gradient(to top, #08001E, #0A0536)
}

.ui.horizontal.divider:after,
.ui.horizontal.divider:before {
    background-image: url();
}

.ui.grid.bulletin .ui.raised.segment {
    position: relative;
    background-color: #151340;
    border: 2px solid transparent;
    border-radius: 1.5rem;
    background-clip: padding-box;
}

.ui.grid.bulletin .ui.raised.segment::after {
    position: absolute;
    top: -2px;
    bottom: -2px;
    left: -2px;
    right: -2px;
    background: linear-gradient(to right, #4800ff, #fc00de);
    content: '';
    z-index: -1;
    border-radius: 1.5rem;
}

.ui.modal.form > .close {
    top: 1.0535rem;
    right: 1rem;
    color: #fff;
}

@media screen and (max-width: 600px) {
    img.title {
        width: 90vw;
    }
    .buttons.registration {}
}

@media screen and (min-width: 1300px) {
    .buttons.registration {
        bottom: 5vw;
    }
}

@media only screen and (max-width: 767px) {
    .banner.ui.container {
        margin-left: 0 !important;
        margin-right: 0 !important;
    }
}

.footer.segment {
    background: linear-gradient(to right, rgb(28, 21, 76), rgb(6, 1, 39)) !important;
}

/*headline is 1/3 page width and 2.08/11.80 page height
fixed ratio
and scale
svg file

aligned title
put images
segments for bulletin
buttons for form

form use modeal
*/

